--- a/listing.tex
+++ b/listing.tex
@@ -158,7 +158,7 @@
 }
 
 \title{sP Exam Project}
-\author{Caspar Emil Jensen, Lucas Lybek Højlund Pedersen, Pætur Magnussen \\ Thomas Dam Nykjær \& Thomas Ilum Andersen}
+\author{Caspar Emil Jensen, Lucas Lybek Højlund Pedersen \\Pætur Magnussen, Thomas Dam Nykjær \& Thomas Ilum Andersen}
 \begin{document}
   \maketitle
   \includepdf[pages=-]{./README.md.pdf}
@@ -205,7 +205,8 @@
   \lstinputlisting[style=colorCMake,caption={./lib/src/CMakeLists.txt}]{./lib/src/CMakeLists.txt}
   \lstinputlisting[style=colorCMake,caption={./test/CMakeLists.txt}]{./test/CMakeLists.txt}
   
-\newpage
+
+  \newpage
 
 \noindent\large\textbf{Benchmark Results}
   \begin{table}[ht]
